# polybase-db

./: .gitignore  Cargo.toml  README.md  depot.json  flake.nix  rust-toolchain.toml  test.sh
gateway/: Cargo.toml
gateway/merk/: 000012.sst  000013.sst  IDENTITY  LOG  LOG.old.1686650355108813  MANIFEST-000015
gateway/src/: lib.rs
hyperguild/: Cargo.toml  build.rs
hyperguild/proto/: guild_service.proto
hyperguild/src/: client.rs  config.rs  event.rs  guild.rs  key.rs  lib.rs  network.rs  peer.rs  pending.rs  proposal.rs  server.rs  service.rs
hyperguild/src/proposal/: event.rs  hash.rs  manifest.rs  proposal.rs  register.rs  store.rs
indexer/: Cargo.toml  README.md
indexer/merk/: 000012.sst  000013.sst  IDENTITY  LOG  LOG.old.1686650355252194  LOG.old.1686650355261683  LOG.old.1686650355261979  LOG.old.1686650355263029  MANIFEST-000015  OPTIONS-000011
indexer/src/: adaptor.rs  auth_user.rs  collection.rs  cursor.rs  index.rs  indexer.proto  keys.rs  lib.rs  list_query.rs  memory.rs  migrate.rs  publickey.rs  record.rs  stableast_ext.rs  store.rs  where_query.rs
indexer/src/job_engine/: job_store.rs  jobs.rs  mod.rs
indexer_api/: Cargo.toml
indexer_api/src/: main.rs
indexer_db_adaptor/: ;  Cargo.toml  README.md
indexer_db_adaptor/src/: adaptor.rs  ast.rs  collection.rs  collection_collection.rs  cursor.rs  db.rs  error.rs  indexer.rs  keys.rs  lib.rs  memory.rs  migrate.rs  publickey.rs  record.rs  stableast_ext.rs  store.rs  validation.rs  where_query.rs
indexer_db_adaptor/src/collection/: ast.rs  authorization.rs  collection.rs  collection_collection.rs  collection_record.rs  cursor.rs  error.rs  field_path.rs  index.rs  mod.rs  record.rs  validation.rs  where_query.rs
indexer_pg/: Cargo.toml
indexer_pg/src/: error.rs  hash.rs  lib.rs  pg_type.rs  queries.rs  row.rs  util.rs
indexer_rocksdb/: Cargo.toml  README.md  build.rs
indexer_rocksdb/src/: adaptor.rs  collection.rs  db.rs  error.rs  index.rs  indexer.proto  key_range.rs  keys.rs  lib.rs  migrate.rs  record.rs  result_stream.rs  rocksdb.rs  snapshot.rs  store.rs  where_query.rs
migrate/: Cargo.toml
migrate/src/: config.rs  main.rs
new_indexer/: .env.postgres  .env.postgres.example  Cargo.toml  README.md  build.rs
new_indexer/docker/: .env  .env.example  docker-compose.yml
new_indexer/migrations/postgres/: 20230711135720_create-tables.down.sql  20230711135720_create-tables.up.sql
new_indexer/proto/: indexer.proto
new_indexer/src/: lib.rs  util.rs
new_indexer/src/db/: mod.rs  postgres.rs
new_indexer/tests/api/: create_coll_minimal.json  general_collection.rs  mod.rs
new_indexer/tests/docker/: .env.postgres  docker-compose.yml
new_indexer/tests/migrations/postgres/: 20230712053503_create-tables.up.sql
polybase/: Cargo.toml  build.rs
polybase/benches/: bench.rs
polybase/proto/: network.proto
polybase/src/: auth.rs  config.rs  db.rs  errors.rs  hash.rs  main.rs  mempool.rs  migrate.rs  pending.rs  raft.rs  rollup.rs  rpc.rs  txn.rs  util.rs
polybase/src/config/: clap_config.rs  mod.rs  toml_config.rs
polybase/src/errors/: code.rs  http.rs  logger.rs  metrics.rs  reason.rs
polybase/src/migrations/: migration_v1.rs  mod.rs
polybase/src/network/: behaviour.rs  client.rs  events.rs  mod.rs  protocol.rs  server.rs  service.rs  stream.rs  transport.rs
polybase/src/rpc/: mod.rs  proofs.rs
polybase/tests/api/: array_field.rs  auth.rs  boolean_field.rs  bytes_field.rs  call.rs  collection_collection.rs  errors.rs  general_collection.rs  index_record_refs.rs  index_where_sort.rs  map_field.rs  mod.rs  nested_field.rs  other_collection_fns.rs  restrict_namespaces.rs  schema_field_update.rs  schema_index_update.rs  start_stop.rs  store_other_collection_records.rs  string_field.rs  whitelist.rs
prover/: Cargo.toml
prover/src/: lib.rs
schema/: Cargo.toml
schema/src/: ast.rs  collection_schema.rs  directive.rs  error.rs  field_path.rs  index.rs  index_value.rs  lib.rs  methods.rs  property.rs  publickey.rs  record.rs  schema.rs  types.rs  util.rs
smirk/: Cargo.toml  README.md
smirk/benches/: insert.rs  miden_benchmark.rs  tree_benchmark.rs
smirk/path/for/rocksdb/: IDENTITY  LOG  LOG.old.1690123945383009  MANIFEST-000005  OPTIONS-000007  OPTIONS-000009
smirk/proptest-regressions/hash/: mod.txt
smirk/proptest-regressions/storage/: structure.txt
smirk/proptest-regressions/storage/rocksdb/: codec.txt  structure.txt
smirk/proptest-regressions/tree/: path.txt  proof.txt
smirk/proptest-regressions/tree/proof/: tests.txt
smirk/proptest-regressions/tree/proof/batch_hash/: mod.txt
smirk/src/: hash.rs  lib.rs  testing.rs
smirk/src/circuits/: cond_swap.rs  mod.rs  utils.rs
smirk/src/circuits/insert/: chip.rs  circuit.rs  config.rs  mod.rs  proof.rs
smirk/src/circuits/insert/circuit/: path.rs
smirk/src/circuits/merkle_gadget/: mod.rs  poseidon_hash.rs
smirk/src/hash/: from_iter.rs  hashable.rs  mod.rs  path.rs  proptest_impls.rs  serde_impls.rs
smirk/src/proof/: insert.rs  mod.rs
smirk/src/snapshots/: smirk__testing__root_hash_snapshot.snap
smirk/src/storage/: codec.rs  error.rs  mod.rs  noop.rs  structure.rs  tests.rs
smirk/src/storage/rocksdb/: codec.rs  mod.rs  structure.rs
smirk/src/tree/: batch.rs  hash.rs  impls.rs  iter.rs  iterator.rs  macros.rs  mod.rs  path.rs  proof.rs  proptest.rs  raw_api.rs  tests.rs  tree_repr.rs  visitor.rs
smirk/src/tree/element/: lsb.rs  mod.rs  serde.rs
smirk/src/tree/proof/: advice.rs  compute_hash.masm  mod.rs  rust_impl.rs  stack.rs  strategy.md  tests.rs  utils.rs
smirk/src/tree/proof/asm/: compute_hash.masm  hash_left_right_this.masl
smirk/src/tree/proof/batch_hash/: advice.rs  batch_hash.masm  mod.rs  program.rs  serde_impls.rs  stack.rs
smirk/src/tree/proof/miden_behaviour_tests/: mod.rs  (+10 more)
smirk/src/tree2/: iter.rs  macros.rs  mod.rs
solid/: Cargo.toml  README.md
solid/docs/: solid.mmd
solid/examples/: basic.rs  multi.rs
solid/src/: cache.rs  change.rs  config.rs  event.rs  key.rs  lib.rs  network.rs  peer.rs  proposal.rs  register.rs  solid.rs  store.rs  txn.rs  util.rs
(+47 files in other folders)
