[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
indexer = { path = "../indexer" }
polylang = { git = "https://github.com/polybase/polylang", branch = "eng-283-indexer" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
v8 = "0.62.2"
thiserror = "1.0"
slog = "2"
slog-term = "2"

[dev-dependencies]
rand = "0.8.5"
