[package]
name = "guild"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gateway = { path = "../gateway" }
indexer = { path = "../indexer" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
slog = "2.7.0"
sha2 = "0.10.6"
uint = "0.9.5"
libp2p-core = { versin = "0.39.0" }
libp2p-swarm = { versin = "0.42.0", features = ["tokio"] }
futures-timer = "3.0.2"
futures = "0.3.26"
prost = "0.11"
tonic = "0.8.3"
tokio-stream = { version = "0.1.12", features = ["sync"] }
bincode = "1.3.3"
thiserror = "1.0.38"
multihash = "0.18.0"
rand = "0.8.5"

[dev-dependencies]
quickcheck = "1.0.3"

[build-dependencies]
tonic-build = "0.8.4"
