[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

[lib]
name = "indexer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cid = "0.10"
jsonwebtoken = "8.2.0"
once_cell = "1.17.0"
ouroboros = "0.15.5"
polylang = { git = "https://github.com/polybase/polylang", branch = "eng-283-indexer", version = "0.1.0" }
prost = "0.11"
prost-types = "0.11"
rocksdb = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "2.2"

[build-dependencies]
prost-build = "0.11"

[dev-dependencies]
rand = "0.8.5"
