[package]
name = "indexer"
version = "0.6.0"
edition = "2021"

[lib]
name = "indexer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
base64 = "0.21"
cid = "0.10"
once_cell = "1.17.0"
polylang = { git = "https://github.com/polybase/polylang", branch = "main", version = "0.1.0" }
prost = "0.11"
prost-types = "0.11"
rocksdb = "0.19"
secp256k1 = { version = "0.26", features = ["rand-std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
serde_with = "2.2"
async-recursion = "1.0.2"
futures = "0.3"
thiserror = "1.0"
hex = "0.4"
slog = "2"
slog-term = "2"

[build-dependencies]
prost-build = "0.11"

[dev-dependencies]
rand = "0.8.5"
