[package]
name = "indexer"
version = "0.6.6-hotfix.1"
edition = "2021"

[lib]
name = "indexer"

[dependencies]
tokio = { version = "1", features = ["full"] }
base64 = "0.21"
cid = "0.10"
polylang = { git = "https://github.com/polybase/polylang", branch = "main", version = "0.1.0" }
schema = { path = "../schema" }
secp256k1 = { version = "0.26", features = ["rand-std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
serde_with = "2.2"
async-recursion = "1.0.2"
futures = "0.3"
thiserror = "1.0"
hex = "0.4"
parking_lot = "0.12.1"
tracing = "0.1.37"
async-trait = "0.1.72"

[build-dependencies]

[dev-dependencies]
rand = "0.8.5"
