[package]
name = "indexer_db_adaptor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
base64 = "0.21"
cid = "0.10"
once_cell = "1.17.0"
polylang = { git = "https://github.com/polybase/polylang", branch = "main", version = "0.1.0" }
secp256k1 = { version = "0.26", features = ["rand-std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
serde_with = "2.2"
async-recursion = "1.0.2"
futures = "0.3"
thiserror = "1.0"
hex = "0.4"
parking_lot = "0.12.1"
tracing = "0.1.37"
async-trait = "0.1.68"

[dev-dependencies]
rand = "0.8.5"

