[package]
name = "migrate"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

reqwest = { version = "0.11", features = ["json"] }
indexer = { path = "../indexer" }
polylang = { git = "https://github.com/polybase/polylang", branch = "main" }
serde = "1.0.152"
tokio = { version = "1", features = ["full"] }
url = "2.3.1"
serde_json = "1.0.93"
anyhow = "1.0.69"
hex = "0.4.3"
secp256k1 = { version = "0.26", features = ["rand-std"] }
regex = "1.7.1"
serde_with = "2.2.0"
clap = { version = "4.1.4", features = ["env", "derive"] }
dirs = "4.0.0"
slog = "2"
slog-term = "2"
slog-async = "2"
