[package]
name = "new_indexer"
version = "0.1.0"
edition = "2021"

[dependencies]

async-trait = "0.1.69"
base64 = "0.21.2"
bigdecimal = { version ="0.4.0", features = ["serde"] }
chrono = { version = "0.4.26", features = ["serde"] }
cid = "0.10"
dotenv = "0.15.0"
hex = "0.4"
miden-crypto = "0.6.0"
polylang = { git = "https://github.com/polybase/polylang", branch = "main", version = "0.1.0" }
prost = "0.11"
prost-wkt = "0.4.2"
prost-wkt-types = "0.4.2"
secp256k1 = { version = "0.26", features = [
    "recovery",
    "global-context",
    "rand",
] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "postgres", "sqlite", "json", "chrono", "bigdecimal"] }
tokio = { version = "1", features = ["full"] }
tonic = "0.9.2"
thiserror = "1.0.40"
tracing = { version = "0.1.37", features = ["valuable"] }

[dev-dependencies]

tokio-test = "0.4.2"
reqwest = { version = "0.11", features = ["json"] }
tempfile = "3"
url = "*"
once_cell = "1"
urlencoding = "2"
rand = "0.8.5"
sha3 = "0.10.6"

[build-dependencies]

prost-wkt-build = "0.4.2"
tonic-build = "0.9.2"




