[package]
name = "polybase"
version = "0.6.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
prost = "0.11"
actix-web = "4"
actix-server = "2.2"
indexer_rocksdb = { path = "../indexer_rocksdb" }
gateway = { path = "../gateway" }
solid = { path = "../solid" }
polylang-prover = { git = "https://github.com/polybase/polylang", rev = "e9da93f7db1bdd68c461e02e3a88f31f81455caf", version = "0.1.0" }
abi = { git = "https://github.com/polybase/polylang", rev = "e9da93f7db1bdd68c461e02e3a88f31f81455caf", version = "0.1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_with = { version = "2.2", features = ["json"] }
futures = "0.3.26"
sha3 = "0.10.6"
secp256k1 = { version = "0.26", features = [
    "recovery",
    "global-context",
    "rand",
] }
clap = { version = "4.1.4", features = ["env", "derive"] }
bincode = "1.3.3"
winter-crypto = "0.4.2"
cid = "0.10"
rand = "0.8.5"
bytes = "1.4.0"
derive_more = "0.99.17"
thiserror = "1.0.38"
futures-util = "0.3.26"
dirs = "4.0.0"
sentry = "0.30.0"
hex = "0.4.3"
actix-cors = "0.6.4"
env_logger = "0.10.0"
chrono = "0.4.24"
async-trait = "0.1.68"
tonic = "0.8.3"
tokio-stream = "0.1.12"
parking_lot = "0.12.1"
libp2p = { version = "0.51", default_features = false, features = [
    "noise",
    "macros",
    "tcp",
    "yamux",
    "tokio",
    "dns",
    "request-response",
] }
libp2p-quic = { version = "0.7.0-alpha.3", features = ["tokio"] }
asynchronous-codec = "0.6"
void = "1.0.2"
either = "1.8.1"
ed25519-dalek = "1.0.1"
bs58 = "0.5.0"
tracing = { version = "0.1.37", features = ["valuable"] }
tracing-subscriber = {version = "0.3.17", features = ["env-filter", "fmt", "std", "registry", "ansi", "json"] }
tracing-stackdriver = { version = "0.7.2", features = [ "valuable" ] }
valuable = { version = "0.1.0", features = ["derive"] }
base64 = "0.21"

[dev-dependencies]
tokio-test = "0.4.2"
reqwest = { version = "0.11", features = ["json"] }
tempfile = "3"
url = "*"
once_cell = "1"
urlencoding = "2"

[build-dependencies]
tonic-build = "0.8.4"
prost-build = "0.11.9"
