[package]
name = "prover"
version = "0.6.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polybase_prover = { package = "prover", git = "https://github.com/polybase/polylang", rev = "ec91f176173f03f0f1f3eaf99a2e5b1beaf70135" }
abi = { git = "https://github.com/polybase/polylang", rev = "ec91f176173f03f0f1f3eaf99a2e5b1beaf70135" }
actix-web = "4"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = { version = "0.1.37", features = ["valuable"] }
