[package]
name = "prover"
version = "0.6.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polylang-prover = { git = "https://github.com/polybase/polylang", rev = "e9da93f7db1bdd68c461e02e3a88f31f81455caf", version = "0.1.0" }
abi = { git = "https://github.com/polybase/polylang", rev = "e9da93f7db1bdd68c461e02e3a88f31f81455caf", version = "0.1.0" }
actix-web = "4"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = { version = "0.1.37", features = ["valuable"] }
