[package]
name = "schema"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polylang = { git = "https://github.com/polybase/polylang", branch = "main", version = "0.1.0" }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
