[package]
name = "schema"
version = "0.6.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polylang = { git = "https://github.com/polybase/polylang", branch = "main", version = "0.1.0" }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
secp256k1 = { version = "0.26", features = ["rand-std"] }
hex = "0.4"
once_cell = "1.17.0"

[dev-dependencies]
rand = "0.8.5"
