[package]
name = "smirk"
version = "0.1.0"
edition = "2021"

[dependencies]
rocksdb = "0.21"
thiserror = "1"
hex = "0.4"
traversal = "0.1"
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"
unarray = "0.1"

proptest = { version = "1", optional = true }
test-strategy = { version = "0.3", optional = true }

miden-crypto = { workspace = true }
miden-processor = { workspace = true }
miden-prover = { workspace = true }
miden-verifier = { workspace = true }
miden-assembly = { workspace = true }


[dev-dependencies]
tempdir = "0.3"
proptest = "1"
test-strategy = "0.3"
pretty_assertions = "1"
insta = "1"
criterion = "0.5"
rand = "0.8"
rand_chacha = "0.3"

[[bench]]
name = "tree_benchmark"
harness = false

[[bench]]
name = "miden_benchmark"
harness = false
