[package]
name = "smirk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs = "0.3"
halo2_gadgets = "0.3"
proptest = { version = "1", optional = true }
ethnum = "1.5.0"
serde = { version = "1", optional = true, features = ["derive"] }
bitvec = "1.0.1"
rand = "0.8.5"
rand_chacha = "0.3.1"

[dev-dependencies]
proptest = "1"
test-strategy = "0.3.1"

[features]
default = ["serde"]

serde = ["dep:serde"]
