[package]
name = "solid"
version = "0.6.6-hotfix.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.6"
uint = "0.9.5"
libp2p-core = { versin = "0.39.0" }
futures-timer = "3.0.2"
futures = "0.3.26"
prost = "0.11"
tokio-stream = { version = "0.1.12", features = ["sync"] }
bincode = "1.3.3"
thiserror = "1.0.38"
multihash = "0.18.0"
rand = "0.8.5"
hex = "0.4.3"
bs58 = "0.5.0"
parking_lot = { version = "0.12.1", features = ["deadlock_detection"] }
# async-trait = "0.1"
chrono = "0.4"


[dev-dependencies]
quickcheck = "1.0.3"
rand = "0.8"
proptest = "1"
test-strategy = "0.3"
tracing = { version = "0.1.37", features = ["valuable"] }
tracing-subscriber = {version = "0.3.17", features = ["env-filter", "fmt", "std", "registry", "ansi"] }

[[example]]

name = "basic"
path = "examples/basic.rs"

[[example]]

name = "multi"
path = "examples/multi.rs"
